--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,39 @@
-.card-img-top {
-  max-width: 100%;
-  max-height: 200px;
+/* Set the width and height of the card container */
+.custom-card-style {
+  width: 300px;
+  height: 300px;
+}
+
+/* Style the log of my app */
+.log {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: large;
+  font-variant: normal;
+}
+
+/* Stye the card count badge */
+.cart-count {
+  font-size: 16px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: #0ef;
+}
+
+/* Se the width and height of the card container*/
+.card {
+  width: 300px;
+  height: 200px;
+}
+
+/* Set the size of the image to occupy 100% of the availabe width of the image container */
+.card-img img {
+  width: 100%;
+  height: 200px;
   object-fit: cover;
 }
 
-.logo {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  font-weight: bold;
-  color: #008080;
-  font-size: 40px;
-  border-bottom: 8px solid #008080;
-  text-shadow: 2px 2px 2px rgb(8, 8, 66);
+/* Set the overflow on the left and right hidden */
+body {
+  overflow-x: hidden;
 }
