--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@
   font-size: 16px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  color: #0ef;
+  color: rgba(0, 0, 0, 0.867);
 }
 
 /* Se the width and height of the card container*/
